@@ -11,6 +11,8 @@ storageType: database
 enableCrossOrigin: true
 incrementalRepair: false
 allowUnreachableNodes: false
+enableDynamicSeedList: true
+
 jmxPorts:
   127.0.0.1: 7100
   127.0.0.2: 7200
