@@ -8,6 +8,7 @@ repairRunThreadCount: 15
 hangingRepairTimeoutMins: 1
 storageType: memory
 incrementalRepair: false
+enableDynamicSeedList: false
 
 logging:
   level: DEBUG
